force-app/main/default/objects/Project_Goals__c/Project_Goals__c.object-meta.xml
<CustomObject>
    <label>Project Goal</label>
    <nameField>
        <displayFormat>PG-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>