force-app/main/default/objects/Project_Goals__c/fields/Project_Goal__c.field-meta.xml
<CustomField>
    <fullName>Project_Goal__c</fullName>
    <label>Project Goal</label>
    <type>TextArea</type>
</CustomField>