force-app/main/default/objects/Project_Goals__c/fields/Project_Goal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Project_Goal_Reason__c</fullName>
    <label>Project Goal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>