force-app/main/default/objects/Project_Goals__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Goals</relationshipLabel>
    <relationshipName>Project_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>